[FIX] Title and contact overlapping under badge - added margin right 30px

--- a/app/assets/stylesheets/job_posting.sass
+++ b/app/assets/stylesheets/job_posting.sass
@@ -32,10 +32,12 @@
     min-height: 75px
   .title
     font-weight: bold
+    margin-right: 30px
     &:first-letter
       text-transform: uppercase
   .contact
     color: #555
+    margin-right: 30px
 
   .arrow_to_detail
     position: absolute
